--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "private": true,
   "dependencies": {
     "@nativescript/core": "~8.4.0",
-    "@nativescript/theme": "~3.0.2"
+    "@nativescript/theme": "~3.0.2",
+    "@triniwiz/nativescript-accelerometer": "^4.0.3"
   },
   "devDependencies": {
+    "@nativescript/android": "8.4.0",
+    "@nativescript/preview-cli": "1.0.2",
     "@nativescript/webpack": "~5.0.12"
   }
 }
